Revert "fix(ui): 360-degree circular menu with centered resize, remove shape clipping"
This reverts commit 529930b75356203ca5f8bf352af7d41ad4cd2247.

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -35,10 +35,6 @@ html:not(.panel-mode) {
   position: relative;
 }
 
-#ball-wrapper.expanded {
-  justify-content: center;
-}
-
 #mascot-container {
   width: 140px;
   height: 140px;
